--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,9 @@
-name: CI/CD Pipeline
+name: Release CI/CD Pipeline
 
 on:
   push:
-    branches: [ main ]
     tags:
       - 'v*'
-    paths:
-      - 'Dockerfile'
-      - 'docker-entrypoint.sh'
-      - 'src/**'
-      - 'package.json'
-      - 'package-lock.json'
-      - 'prisma/**'
-      - 'vitest.config.ts'
-  pull_request:
-    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -96,12 +85,62 @@ jobs:
         run: npm run build
 
   # ============================================
-  # 阶段 4: Docker 构建与发布 (仅 main/tag)
+  # 阶段 4: E2E 测试 (真实场景验证)
+  # ============================================
+  e2e-test:
+    runs-on: ubuntu-latest
+    name: E2E Tests
+    needs: build-check
+    timeout-minutes: 60
+    env:
+      DATABASE_URL: "file:./e2e.db"
+      NEXTAUTH_SECRET: "ci-secret-value-123456"
+      NEXTAUTH_URL: "http://127.0.0.1:3000"
+      
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Setup Database
+        run: |
+          npx prisma db push
+          npx prisma db seed
+
+      - name: Build application
+        run: npm run build
+
+      - name: Run Playwright tests
+        run: npx playwright test
+        env:
+          CI: true
+          
+      - name: Upload Playwright Report
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 7
+
+  # ============================================
+  # 阶段 5: Docker 构建与发布 (仅 tag)
   # ============================================
   docker-build:
     runs-on: ubuntu-latest
     name: Docker Build & Push
-    needs: build-check
+    needs: e2e-test
     # 只在 tag 推送时构建镜像（避免 main 分支推送自动更新 latest）
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
