chore: 优化项目配置和日志管理
## CI/CD 改进
- 在 ci-e2e.yml 添加 build-check 阶段,确保构建验证在 E2E 测试前完成
- 统一 Playwright 报告保留时间:开发环境 7 天,发布环境 30 天
- 移除 ci.yml 的 workflow_dispatch 手动触发,简化发布流程

## 安全加固
- 启用 /api/analyze 和 /api/reanswer 的认证检查,防止未授权访问

## 日志系统升级
- 引入 pino 高性能日志库(10.1.0)替代 console.log
- 创建统一的日志工具 src/lib/logger.ts
- 重构核心 AI API 日志:
  * /api/analyze: 替换 9 处 console 调用
  * /api/reanswer: 替换 4 处 console 调用
- 新增 LOG_LEVEL 环境变量配置

## 开发规范
- 更新 .cursorrulers:
  * 新增 Git 提交规则(禁止自动提交,要求人工确认)
  * 新增响应式设计规则(PC/移动端支持要求)

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,8 @@ OPENAI_MODEL="gpt-4o" # 可选，默认为 gpt-4o
 GOOGLE_API_KEY=""
 GEMINI_BASE_URL="" # 可选，用于自定义 API 地址
 GEMINI_MODEL="gemini-2.5-flash" # 可选，默认为 gemini-2.5-flash
+
+# 日志配置
+# 日志级别: trace, debug, info, warn, error, fatal
+# 开发环境建议使用 debug，生产环境建议使用 info
+LOG_LEVEL="debug"
