--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - 'v*'
-  workflow_dispatch:
 
 jobs:
   # ============================================
@@ -132,7 +131,7 @@ jobs:
         with:
           name: playwright-report
           path: playwright-report/
-          retention-days: 7
+          retention-days: 30
 
   # ============================================
   # 阶段 5: Docker 构建与发布 (仅 tag)
@@ -141,7 +140,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Docker Build & Push
     needs: e2e-test
-    # 只在 tag 推送时构建镜像（避免 main 分支推送自动更新 latest）
+    # 只在 tag 推送时构建镜像
     if: startsWith(github.ref, 'refs/tags/v')
     permissions:
       contents: read
