--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "next": "^16.0.10",
     "next-auth": "^4.24.13",
     "openai": "^6.9.1",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
