CI: 配置 .md 文件和 doc 目录不触发 CI 流程

--- a/.github/workflows/ci-e2e.yml
+++ b/.github/workflows/ci-e2e.yml
@@ -10,8 +10,23 @@ on:
       - 'prisma/**'
       - 'e2e/**'
       - 'playwright.config.ts'
+      - '.github/workflows/**'
+    paths-ignore:
+      - '**.md'
+      - 'doc/**'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'src/**'
+      - 'package.json'
+      - 'package-lock.json'
+      - 'prisma/**'
+      - 'e2e/**'
+      - 'playwright.config.ts'
+      - '.github/workflows/**'
+    paths-ignore:
+      - '**.md'
+      - 'doc/**'
   workflow_dispatch:
 
 jobs:
